fix `/lib` folder handling